got the lightbox to work

--- a/interactivePhotoGallery.html
+++ b/interactivePhotoGallery.html
@@ -15,31 +15,30 @@
 <div id="container">   <!--opening container div  -->
 
   <div class="row ">
-    <img src="photos/thumbnails/01.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/02.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/03.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/04.jpg" data-lightbox="gallery">
+    <a class="example-image-link" href="photos/01.jpg" data-lightbox="gallery"><img src="photos/thumbnails/01.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/02.jpg" data-lightbox="gallery"><img src="photos/thumbnails/02.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/03.jpg" data-lightbox="gallery"><img src="photos/thumbnails/03.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/04.jpg" data-lightbox="gallery"><img src="photos/thumbnails/04.jpg"></a>
   </div>
 
   <div class="row">
-    <img src="photos/thumbnails/05.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/06.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/07.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/08.jpg" data-lightbox="gallery">
+    <a class="example-image-link" href="photos/05.jpg" data-lightbox="gallery"><img src="photos/thumbnails/05.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/06.jpg" data-lightbox="gallery"><img src="photos/thumbnails/06.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/07.jpg" data-lightbox="gallery"><img src="photos/thumbnails/07.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/08.jpg" data-lightbox="gallery"><img src="photos/thumbnails/08.jpg" data-lightbox="gallery"></a>
   </div>
 
   <div class="row">
-    <img src="photos/thumbnails/09.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/10.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/11.jpg" data-lightbox="gallery">
-    <img src="photos/thumbnails/12.jpg" data-lightbox="gallery">
+    <a class="example-image-link" href="photos/09.jpg" data-lightbox="gallery"><img src="photos/thumbnails/09.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/10.jpg" data-lightbox="gallery"><img src="photos/thumbnails/10.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/11.jpg" data-lightbox="gallery"><img src="photos/thumbnails/11.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/12.jpg" data-lightbox="gallery"><img src="photos/thumbnails/12.jpg" data-lightbox="gallery"></a>
   </div>
 
 </div>  <!--closing container div  -->
 
 <script src="js/jquery-3.2.1.min (1).js"></script>
 <script src="js/photoGallery.js"></script>
-<script src="lightbox2-dev/dist/js/lightbox-plus-jquery.min.js"></script>
 <script src="lightbox2-dev/dist/js/lightbox.min.js"></script>
 </body>
 </html>
