--- a/interactivePhotoGallery.html
+++ b/interactivePhotoGallery.html
@@ -15,24 +15,24 @@
 <div id="container">   <!--opening container div  -->
 
   <div class="row ">
-    <a class="example-image-link" href="photos/01.jpg" data-lightbox="gallery"><img src="photos/thumbnails/01.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/02.jpg" data-lightbox="gallery"><img src="photos/thumbnails/02.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/03.jpg" data-lightbox="gallery"><img src="photos/thumbnails/03.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/04.jpg" data-lightbox="gallery"><img src="photos/thumbnails/04.jpg"></a>
+    <a class="example-image-link" href="photos/01.jpg" data-lightbox="gallery" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields." data-alt="Hay Bales"><img src="photos/thumbnails/01.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/02.jpg" data-lightbox="gallery" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here." data-alt="Lake"><img src="photos/thumbnails/02.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/03.jpg" data-lightbox="gallery" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below." data-alt="Canyon"><img src="photos/thumbnails/03.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/04.jpg" data-lightbox="gallery" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today." data-alt="Iceberg"><img src="photos/thumbnails/04.jpg"></a>
   </div>
 
   <div class="row">
-    <a class="example-image-link" href="photos/05.jpg" data-lightbox="gallery"><img src="photos/thumbnails/05.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/06.jpg" data-lightbox="gallery"><img src="photos/thumbnails/06.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/07.jpg" data-lightbox="gallery"><img src="photos/thumbnails/07.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/08.jpg" data-lightbox="gallery"><img src="photos/thumbnails/08.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/05.jpg" data-lightbox="gallery" data-title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons." data-alt="Desert"><img src="photos/thumbnails/05.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/06.jpg" data-lightbox="gallery" data-title="Fall is coming, I love when the leaves on the trees start to change color." data-alt="Fall"><img src="photos/thumbnails/06.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/07.jpg" data-lightbox="gallery" data-title="I drove past this plantation yesterday, everything is so green!" data-alt="Plantation"><img src="photos/thumbnails/07.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/08.jpg" data-lightbox="gallery" data-title="My summer vacation to the Oregon Coast. I love the sandy dunes!" data-alt="Dunes"><img src="photos/thumbnails/08.jpg" data-lightbox="gallery"></a>
   </div>
 
   <div class="row">
-    <a class="example-image-link" href="photos/09.jpg" data-lightbox="gallery"><img src="photos/thumbnails/09.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/10.jpg" data-lightbox="gallery"><img src="photos/thumbnails/10.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/11.jpg" data-lightbox="gallery"><img src="photos/thumbnails/11.jpg" data-lightbox="gallery"></a>
-    <a class="example-image-link" href="photos/12.jpg" data-lightbox="gallery"><img src="photos/thumbnails/12.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/09.jpg" data-lightbox="gallery" data-title="We enjoyed a quiet stroll down this countryside lane." data-alt="Countryside Lane"><img src="photos/thumbnails/09.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/10.jpg" data-lightbox="gallery" data-title="Sunset at the coast! The sky turned a lovely shade of orange." data-alt="Sunset"><img src="photos/thumbnails/10.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/11.jpg" data-lightbox="gallery" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking." data-alt="Cave"><img src="photos/thumbnails/11.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/12.jpg" data-lightbox="gallery" data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in." data-alt="Bluebells"><img src="photos/thumbnails/12.jpg" data-lightbox="gallery"></a>
   </div>
 
 </div>  <!--closing container div  -->
