index file name changed for html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 <!-- Search Box -->
-<input type="search" id="mySearch" value="photo">
+<input type="text" id="mySearch" value="photo" >
 <!-- images -->
 <div id="container">   <!--opening container div  -->
 
   <div class="row ">
-    <a class="example-image-link" href="photos/01.jpg" data-lightbox="gallery" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields." data-alt="Hay Bales"><img src="photos/thumbnails/01.jpg" data-lightbox="gallery"></a>
+    <a class="example-image-link" href="photos/01.jpg" data-search="Hay Bales" data-lightbox="gallery" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields." data-alt="Hay Bales"><img src="photos/thumbnails/01.jpg" data-lightbox="gallery"></a>
     <a class="example-image-link" href="photos/02.jpg" data-lightbox="gallery" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here." data-alt="Lake"><img src="photos/thumbnails/02.jpg" data-lightbox="gallery"></a>
     <a class="example-image-link" href="photos/03.jpg" data-lightbox="gallery" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below." data-alt="Canyon"><img src="photos/thumbnails/03.jpg" data-lightbox="gallery"></a>
     <a class="example-image-link" href="photos/04.jpg" data-lightbox="gallery" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today." data-alt="Iceberg"><img src="photos/thumbnails/04.jpg"></a>
@@ -39,6 +39,7 @@
 
 <script src="js/jquery-3.2.1.min (1).js"></script>
 <script src="js/photoGallery.js"></script>
+<script src="Live-Search-Plugin-jQuery-e-search/e-search.min.js"></script>
 <script src="lightbox2-dev/dist/js/lightbox.min.js"></script>
 </body>
 </html>
