--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Interactive Photo Gallery</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="vendor/lightbox2-dev/dist/css/lightbox.min.css">
-  <link rel="stylesheet" href="css/interactivePhotoGallery.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="stylesheet" href="vendor/lightbox2-dev/dist/css/lightbox.min.css" type="text/css"/>
+  <link rel="stylesheet" href="css/interactivePhotoGallery.css" type="text/css"/>
 
 </head>
 
@@ -77,10 +77,10 @@
   </div>
   <!--closing container div  -->
 
-  <script src="js/jquery-3.2.1.min (1).js"></script>
+  <script src="vendor/jquery-3.2.1.min.js"></script>
   <script src="vendor/HideSeek-master/jquery.hideseek.js"></script>
-  <script src="js/photoGallery.js"></script>
   <script src="vendor/lightbox2-dev/dist/js/lightbox.js"></script>
+  <script src="js/photoGallery.js"></script>
 </body>
 
 </html>
