--- a/index.html
+++ b/index.html
@@ -20,57 +20,57 @@
     <div class="row list">
       <a class="image-link" href="photos/01.jpg" data-lightbox="gallery" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields."
         data-alt="Hay Bales">
-        <img src="photos/thumbnails/01.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/01.jpg" data-lightbox="gallery" alt="hay bale">
       </a>
       <a class="image-link" href="photos/02.jpg" data-lightbox="gallery" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here."
         data-alt="Lake">
-        <img src="photos/thumbnails/02.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/02.jpg" data-lightbox="gallery" alt="lake">
       </a>
       <a class="image-link" href="photos/03.jpg" data-lightbox="gallery" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below."
         data-alt="Canyon">
-        <img src="photos/thumbnails/03.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/03.jpg" data-lightbox="gallery" alt="canyon">
       </a>
       <a class="image-link" href="photos/04.jpg" data-lightbox="gallery" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today."
         data-alt="Iceberg">
-        <img src="photos/thumbnails/04.jpg">
+        <img src="photos/thumbnails/04.jpg" data-lightbox="gallery" alt="iceberg">
       </a>
     </div>
     <div class="row list">
       
       <a class="image-link" href="photos/05.jpg" data-lightbox="gallery" data-title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."
         data-alt="Desert">
-        <img src="photos/thumbnails/05.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/05.jpg" data-lightbox="gallery" alt="desert">
       </a>      
       <a class="image-link" href="photos/06.jpg" data-lightbox="gallery" data-title="Fall is coming, I love when the leaves on the trees start to change color."
         data-alt="Fall">
-        <img src="photos/thumbnails/06.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/06.jpg" data-lightbox="gallery" alt="fall">
       </a>
       <a class="image-link" href="photos/07.jpg" data-lightbox="gallery" data-title="I drove past this ptation yesterday, everything is so green!"
         data-alt="Ptation">
-        <img src="photos/thumbnails/07.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/07.jpg" data-lightbox="gallery" alt="plantation">
       </a>
       <a class="image-link" href="photos/08.jpg" data-lightbox="gallery" data-title="My summer vacation to the Oregon Coast. I love the sandy dunes!"
         data-alt="Dunes">
-        <img src="photos/thumbnails/08.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/08.jpg" data-lightbox="gallery" alt="dunes">
       </a>    
     </div>
 
     <div class="row list">        
       <a class="image-link" href="photos/09.jpg" data-lightbox="gallery" data-title="We enjoyed a quiet stroll down this countryside e."
         data-alt="Countryside Lane">
-        <img src="photos/thumbnails/09.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/09.jpg" data-lightbox="gallery" alt="countryside">
       </a>
       <a class="image-link" href="photos/10.jpg" data-lightbox="gallery" data-title="Sunset at the coast! The sky turned a lovely shade of orange."
         data-alt="Sunset">
-        <img src="photos/thumbnails/10.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/10.jpg" data-lightbox="gallery" alt="sunset">
       </a>
       <a class="image-link" href="photos/11.jpg" data-lightbox="gallery" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking."
         data-alt="Cave">
-        <img src="photos/thumbnails/11.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/11.jpg" data-lightbox="gallery" alt="cave">
       </a>
       <a class="image-link" href="photos/12.jpg" data-lightbox="gallery" data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."
         data-alt="Bluebells">
-        <img src="photos/thumbnails/12.jpg" data-lightbox="gallery">
+        <img src="photos/thumbnails/12.jpg" data-lightbox="gallery" alt="meadow">
       </a>
     </div>
 
